# politikpraxis

./: .env.example  .gitignore  AGENTS.md  CHANGELOG-BACKLOG.md  CLAUDE.md  README.md  TEST_COVERAGE_ANALYSIS.md  bundesrepublik_gdd.md  bundesrepublik_v3.html  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml  package-lock.json  plan.md  requirements-test.txt
backend/: .dockerignore  .env  .env.example  Dockerfile  Dockerfile.prod  alembic.ini  openapi.json  pyproject.toml  requirements.txt
backend/app/: config.py  dependencies.py  limiter.py  main.py  observability.py
backend/app/auth/: __init__.py  security.py
backend/app/db/: database.py
backend/app/models/: __init__.py  _shared.py  admin_rate_limit.py  agenda_ziele.py  analytics.py  bundesrat.py  chars.py  content.py  eu.py  events.py  game_stat.py  gesetze.py  magic_link.py  medien_akteur.py  ministerial.py  mod.py  password_reset_token.py  politikfelder.py  refresh_token.py  save.py  user.py  usertest_feedback.py  verbaende.py
backend/app/routes/: admin.py  admin_bundesrat.py  admin_chars.py  admin_events.py  admin_gesetze.py  admin_utils.py  analytics.py  auth.py  content.py  game.py  kontakt.py  mods.py  saves.py  stats.py  usertest_feedback.py
backend/app/schemas/: admin.py  analytics.py  auth.py  content.py  game.py  kontakt.py  mod.py  (+3 more)
backend/scripts/: check_frontend_content_drift.py  export_openapi.py  gen_sma501_migration_data.py  validate_content.py
backend/tests/: conftest.py  test_admin_api.py  test_admin_rate_limit.py  test_agenda_eval_service.py  test_analytics_api.py  test_analytics_service.py  test_auth_api.py  test_auth_service.py  test_auth_service_new.py  test_content_api.py  test_content_db_service.py  test_content_validation.py  test_database_config.py  test_dependencies.py  test_email_service.py  test_frontend_content_drift.py  test_game_api.py  test_historisches_urteil_service.py  test_kontakt_api.py  test_limiter_proxy_ip.py  test_mods_api.py  test_saves_api.py  test_security_headers.py  test_spielende_service.py  test_stats_api.py  test_usertest_feedback_api.py
(+579 files in other folders)
