[project]
name = "bundesrepublik-backend"
version = "0.1.0"
description = "FastAPI-Backend für Bundesrepublik"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # Zeilenlänge: übernimmt der Formatter
    "B008", # FastAPI: Depends() in Default-Argumenten ist vorgesehen
]

[tool.ruff.lint.per-file-ignores]
# Alembic: generierte/teilautomatische Struktur, Union-Revisionen etc.
"app/db/migrations/**/*.py" = ["I", "UP", "E402"]

[tool.ruff.format]
quote-style = "double"
